--- a/Training_Skills/Wine_Classifier/Wine_Classifier.ipynb
+++ b/Training_Skills/Wine_Classifier/Wine_Classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false
    },
@@ -151,7 +151,7 @@
        "4      9.4        5   red  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,14 +199,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acurácia: 0.9948717948717949\n"
+      "Acurácia: 0.9964102564102564\n"
      ]
     }
    ],
@@ -220,24 +220,24 @@
     "\n",
     "#Imprimindo Resultados\n",
     "resultado = modelo.score(x_teste, y_teste)\n",
-    "print(\"Acurácia:\", resultado) # Procentagem dos dados que conseguiu acertar"
+    "print(\"Acurácia:\", resultado) # Porcentagem dos dados que conseguiu acertar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1969    1\n",
-       "916     0\n",
-       "5240    1\n",
+       "6088    1\n",
+       "1876    1\n",
+       "1482    0\n",
        "Name: style, dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -288,49 +288,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>1969</td>\n",
-       "      <td>6.9</td>\n",
-       "      <td>0.330</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.053</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>148.0</td>\n",
-       "      <td>0.99270</td>\n",
-       "      <td>3.12</td>\n",
-       "      <td>0.45</td>\n",
-       "      <td>9.4</td>\n",
+       "      <td>6088</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>0.030</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>0.98926</td>\n",
+       "      <td>3.13</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>13.0</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>916</td>\n",
-       "      <td>5.3</td>\n",
-       "      <td>0.715</td>\n",
-       "      <td>0.19</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.161</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>0.99395</td>\n",
-       "      <td>3.62</td>\n",
-       "      <td>0.61</td>\n",
-       "      <td>11.0</td>\n",
+       "      <td>1876</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0.042</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.99150</td>\n",
+       "      <td>2.89</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>10.6</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5240</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0.250</td>\n",
-       "      <td>0.40</td>\n",
-       "      <td>5.7</td>\n",
-       "      <td>0.052</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>152.0</td>\n",
-       "      <td>0.99398</td>\n",
-       "      <td>3.16</td>\n",
-       "      <td>0.88</td>\n",
-       "      <td>10.5</td>\n",
-       "      <td>6</td>\n",
+       "      <td>1482</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>0.114</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.99719</td>\n",
+       "      <td>3.33</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>10.3</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -338,22 +338,22 @@
       ],
       "text/plain": [
        "      fixed_acidity  volatile_acidity  citric_acid  residual_sugar  chlorides  \\\n",
-       "1969            6.9             0.330         0.21             1.0      0.053   \n",
-       "916             5.3             0.715         0.19             1.5      0.161   \n",
-       "5240            6.0             0.250         0.40             5.7      0.052   \n",
+       "6088            6.7              0.48         0.49             2.9      0.030   \n",
+       "1876            7.7              0.26         0.40             1.1      0.042   \n",
+       "1482            7.2              0.58         0.54             2.1      0.114   \n",
        "\n",
        "      free_sulfur_dioxide  total_sulfur_dioxide  density    pH  sulphates  \\\n",
-       "1969                 39.0                 148.0  0.99270  3.12       0.45   \n",
-       "916                   7.0                  62.0  0.99395  3.62       0.61   \n",
-       "5240                 56.0                 152.0  0.99398  3.16       0.88   \n",
+       "6088                 28.0                 122.0  0.98926  3.13       0.40   \n",
+       "1876                  9.0                  60.0  0.99150  2.89       0.50   \n",
+       "1482                  3.0                   9.0  0.99719  3.33       0.57   \n",
        "\n",
        "      alcohol  quality  \n",
-       "1969      9.4        6  \n",
-       "916      11.0        5  \n",
-       "5240     10.5        6  "
+       "6088     13.0        6  \n",
+       "1876     10.6        5  \n",
+       "1482     10.3        4  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,16 +373,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 0, 1], dtype=int64)"
+       "array([1, 1, 0], dtype=int64)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
