--- a/Competitions/Titanic/Titanic_Prediction_RandomForestClassifier.ipynb
+++ b/Competitions/Titanic/Titanic_Prediction_RandomForestClassifier.ipynb
@@ -9,7 +9,7 @@
     "# Imports\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.tree import DecisionTreeClassifier"
+    "from sklearn.ensemble import RandomForestClassifier"
    ]
   },
   {
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1031,7 @@
        "(0, 0)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1043,67 +1043,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=3,\n",
-       "                       max_features=None, max_leaf_nodes=None,\n",
-       "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "                       min_samples_leaf=1, min_samples_split=2,\n",
-       "                       min_weight_fraction_leaf=0.0, presort=False,\n",
-       "                       random_state=0, splitter='best')"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = new_dtrain.drop(['Survived'], axis=1) # Features\n",
-    "y = new_dtrain['Survived'] # Target\n",
-    "tree = DecisionTreeClassifier(max_depth=3, random_state=0) # ML Algorithm - Decision Tree\n",
-    "tree.fit(x, y) # Training the ML model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8271604938271605"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tree.score(x, y) # Accuracy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Submission Data\n",
-    "submission = pd.DataFrame()\n",
-    "submission['PassengerId'] = new_dtest['PassengerId']\n",
-    "submission['Survived'] = tree.predict(new_dtest)"
+    "x = new_dtrain.drop(['Survived'], axis=1)\n",
+    "y = new_dtrain['Survived']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='entropy',\n",
+       "                       max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+       "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "                       min_samples_leaf=1, min_samples_split=2,\n",
+       "                       min_weight_fraction_leaf=0.0, n_estimators=30,\n",
+       "                       n_jobs=None, oob_score=False, random_state=0, verbose=0,\n",
+       "                       warm_start=False)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "f_train, f_test, t_train, t_test = train_test_split(x, y, test_size = 0.3)\n",
+    "tree = RandomForestClassifier(n_estimators=30, criterion='entropy', random_state=0) # ML Algorithm - Decision Tree\n",
+    "tree.fit(f_train, t_train) # Training the ML model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8470149253731343"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tree.score(f_test, t_test) # Accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1170,53 +1169,42 @@
        "4          896         1"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Accuracy of Submission\n",
     "g_sub = pd.read_csv('Data/gender_submission.csv')\n",
     "g_sub.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(418, 418)"
-      ]
-     },
-     "execution_count": 174,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Total = 418 rows\n",
-    "submission.PassengerId.count(), g_sub.PassengerId.count()"
+    "# Submission Data\n",
+    "submission = pd.DataFrame()\n",
+    "submission['PassengerId'] = new_dtest['PassengerId']\n",
+    "submission['Survived'] = tree.predict(new_dtest)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.937799043062201\n"
+      "0.8564593301435407\n"
      ]
     }
    ],
    "source": [
-    "# Total = 418 rows\n",
     "counter = 0 # Correct Predictions\n",
     "for index, row in submission.iterrows() :\n",
     "    if (submission.iloc[index]['Survived'] == g_sub.iloc[index]['Survived']):\n",
@@ -1226,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
