--- a/Competitions/Titanic/Titanic_Prediction_DecisionTreeClassifier.ipynb
+++ b/Competitions/Titanic/Titanic_Prediction_DecisionTreeClassifier.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.tree import DecisionTreeClassifier"
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +147,7 @@
        "4            5         0       3    male  35.0      0      0   8.0500        S"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +261,7 @@
        "4          896       3  female  22.0      1      1  12.2875        S"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +406,7 @@
        "4         1           0           0           1  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +547,7 @@
        "4           0           0           1  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +826,7 @@
        "Embarked_S     1.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +858,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +901,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 80,
    "metadata": {
     "scrolled": true
    },
@@ -933,7 +935,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +977,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +998,7 @@
        "(15, 2)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1033,7 @@
        "(0, 0)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1043,190 +1045,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=3,\n",
-       "                       max_features=None, max_leaf_nodes=None,\n",
-       "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "                       min_samples_leaf=1, min_samples_split=2,\n",
-       "                       min_weight_fraction_leaf=0.0, presort=False,\n",
-       "                       random_state=0, splitter='best')"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = new_dtrain.drop(['Survived'], axis=1) # Features\n",
-    "y = new_dtrain['Survived'] # Target\n",
-    "tree = DecisionTreeClassifier(max_depth=3, random_state=0) # ML Algorithm - Decision Tree\n",
-    "tree.fit(x, y) # Training the ML model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8271604938271605"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tree.score(x, y) # Accuracy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Submission Data\n",
-    "submission = pd.DataFrame()\n",
-    "submission['PassengerId'] = new_dtest['PassengerId']\n",
-    "submission['Survived'] = tree.predict(new_dtest)"
+    "x = new_dtrain.drop(['Survived'], axis=1) # Features\n",
+    "y = new_dtrain['Survived'] # Target"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PassengerId</th>\n",
-       "      <th>Survived</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>892</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>893</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>894</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>895</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>896</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   PassengerId  Survived\n",
-       "0          892         0\n",
-       "1          893         1\n",
-       "2          894         0\n",
-       "3          895         0\n",
-       "4          896         1"
-      ]
-     },
-     "execution_count": 173,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Accuracy of Submission\n",
-    "g_sub = pd.read_csv('Data/gender_submission.csv')\n",
-    "g_sub.head()"
+    "f_train, f_test, t_train, t_test = train_test_split(x, y, test_size = 0.3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(418, 418)"
-      ]
-     },
-     "execution_count": 174,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Total = 418 rows\n",
-    "submission.PassengerId.count(), g_sub.PassengerId.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.937799043062201\n"
+      "0.8134328358208955\n"
      ]
     }
    ],
    "source": [
-    "# Total = 418 rows\n",
-    "counter = 0 # Correct Predictions\n",
-    "for index, row in submission.iterrows() :\n",
-    "    if (submission.iloc[index]['Survived'] == g_sub.iloc[index]['Survived']):\n",
-    "        counter += 1\n",
-    "print(counter/submission.shape[0]) # Percentage of correct answers"
+    "tree_1 = DecisionTreeClassifier(max_depth=3, random_state=0) # ML Algorithm - Decision Tree\n",
+    "tree_1.fit(f_train, t_train) # Training the ML model\n",
+    "print(tree_1.score(f_test, t_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8208955223880597\n"
+     ]
+    }
+   ],
+   "source": [
+    "tree_2 = RandomForestClassifier(n_estimators=25, criterion='entropy', random_state=0) # ML Algorithm - Decision Tree\n",
+    "tree_2.fit(f_train, t_train) # Training the ML model\n",
+    "print(tree_2.score(f_test, t_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Submission Data\n",
+    "submission = pd.DataFrame()\n",
+    "submission['PassengerId'] = new_dtest['PassengerId']\n",
+    "submission['Survived'] = tree_2.predict(new_dtest)\n",
+    "submission.to_csv('submission.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
