--- a/Competitions/Titanic/Data_Analysis.ipynb
+++ b/Competitions/Titanic/Data_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,14 +93,14 @@
     }
    ],
    "source": [
-    "figbi, axesbi = plt.subplots(2, 4, figsize=(16, 10))\n",
-    "df.groupby('Pclass')['Survived'].mean().plot(kind='barh',ax=axesbi[0,0],xlim=[0,1])\n",
-    "df.groupby('SibSp')['Survived'].mean().plot(kind='barh',ax=axesbi[0,1],xlim=[0,1])\n",
-    "df.groupby('Parch')['Survived'].mean().plot(kind='barh',ax=axesbi[0,2],xlim=[0,1])\n",
-    "df.groupby('Sex')['Survived'].mean().plot(kind='barh',ax=axesbi[0,3],xlim=[0,1])\n",
-    "df.groupby('Embarked')['Survived'].mean().plot(kind='barh',ax=axesbi[1,0],xlim=[0,1])\n",
-    "sns.boxplot(x=\"Survived\", y=\"Age\", data=df,ax=axesbi[1,1])\n",
-    "sns.boxplot(x=\"Survived\", y=\"Fare\", data=df,ax=axesbi[1,2])"
+    "figbi, axes= plt.subplots(2, 4, figsize=(16, 10))\n",
+    "df.groupby('Pclass')['Survived'].mean().plot(kind='barh',ax=axes[0,0],xlim=[0,1])\n",
+    "df.groupby('SibSp')['Survived'].mean().plot(kind='barh',ax=axes[0,1],xlim=[0,1])\n",
+    "df.groupby('Parch')['Survived'].mean().plot(kind='barh',ax=axes[0,2],xlim=[0,1])\n",
+    "df.groupby('Sex')['Survived'].mean().plot(kind='barh',ax=axes[0,3],xlim=[0,1])\n",
+    "df.groupby('Embarked')['Survived'].mean().plot(kind='barh',ax=axes[1,0],xlim=[0,1])\n",
+    "sns.boxplot(x=\"Survived\", y=\"Age\", data=df,ax=axes[1,1])\n",
+    "sns.boxplot(x=\"Survived\", y=\"Fare\", data=df,ax=axes[1,2])"
    ]
   },
   {
