--- a/Python/Data_Visualization/Academic_Achievement.ipynb
+++ b/Python/Data_Visualization/Academic_Achievement.ipynb
@@ -43,7 +43,7 @@
     "third_period = {\"4-ALG_L\": 9.4, \"4-EDA\": 8.4, \"4-LEDA\": 9.2, \"4-LOG\": 8.0, \"4-GRAF\": 8.9, \"2-PE\": 10.0}\n",
     "fourth_period = {\"4-BD1\": 9.4, \"4-PROB\": 8.3, \"4-LOAC\": 10.0, \"4-OAC\": 10.0, \"4-PLP\": 9.8}\n",
     "fifth_period = {\"4-EST\": 8.3, \"4-REDES\": 9.8, \"4-SO\": 9.1, \"4-TEO\": 9.7}\n",
-    "periods = [first_period, second_period, third_period, fourth_period, fifth_ore]\n",
+    "periods = [first_period, second_period, third_period, fourth_period, fifth_period]\n",
     "\n",
     "# Math functions\n",
     "\n",
